--- a/html/shop.html
+++ b/html/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="auther" content="iskander jennene">
-    <link rel="icon" type="image/jpg" href="../image/image.jpg"> 
+    <link rel="icon" type="image/jpg" href=""> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="project 1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg   " style="background-color: #e3f2fd;">
     <div class="container-fluid ">
         <a class="navbar-brand" href="#">
-            <img src="../image/image.jpg" 
+            <img src="" 
                 alt="Logo" 
                 width="30" 
                 height="24" 
@@ -27,7 +27,7 @@
             id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active"
+                    <a class="nav-link active text-white"
                         aria-current="page" 
                         href="./shop.html">Home
                     </a>
